Add clear button and refactor code

--- a/index.html
+++ b/index.html
@@ -14,19 +14,10 @@
         <button class="btn-grid">Grid Squares</button>
         <button class="btn-black">Black</button>
         <button class="btn-rgb">Colorful</button>
+        <button class="btn-clear">Clear</button>
       </div>
       <div class="container grid-content">
-        <div class="sketch-pad">
-          <div class="box"></div>
-          <div class="box"></div>
-          <div class="box"></div>
-          <div class="box"></div>
-          <div class="box"></div>
-          <div class="box"></div>
-          <div class="box"></div>
-          <div class="box"></div>
-          <div class="box"></div>
-        </div>
+        <div class="sketch-pad"></div>
       </div>
       <div class="footer">The Odin Project @ 2024</div>
     </div>
